--- a/authors.html
+++ b/authors.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns# fb: https://www.facebook.com/2008/fbml">
 <head>
-    <title>Authors - DataTris.com</title>
+    <title>Authors - datatris.com</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -13,19 +13,19 @@
         <meta name="author" content="Tristana Sondon" />
 
     <!-- Open Graph tags -->
-        <meta property="og:site_name" content="DataTris.com" />
+        <meta property="og:site_name" content="datatris.com" />
         <meta property="og:type" content="website"/>
-        <meta property="og:title" content="DataTris.com"/>
-        <meta property="og:url" content=""/>
-        <meta property="og:description" content="DataTris.com"/>
+        <meta property="og:title" content="datatris.com"/>
+        <meta property="og:url" content="datatris.com"/>
+        <meta property="og:description" content="datatris.com"/>
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="/theme/css/bootstrap.min.css" type="text/css"/>
-    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="datatris.com/theme/css/bootstrap.min.css" type="text/css"/>
+    <link href="datatris.com/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="/theme/css/pygments/native.css" rel="stylesheet">
-    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
+    <link href="datatris.com/theme/css/pygments/native.css" rel="stylesheet">
+    <link rel="stylesheet" href="datatris.com/theme/css/style.css" type="text/css"/>
 
 
 
@@ -43,20 +43,20 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/" class="navbar-brand">
-DataTris.com            </a>
+            <a href="datatris.com/" class="navbar-brand">
+datatris.com            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                         <li >
-                            <a href="/category/code.html">Code</a>
+                            <a href="datatris.com/category/code.html">Code</a>
                         </li>
                         <li >
-                            <a href="/category/general.html">General</a>
+                            <a href="datatris.com/category/general.html">General</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
+              <li><a href="datatris.com/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -67,8 +67,8 @@ DataTris.com            </a>
 <div class="container">
     <div class="row">
         <div class="col-sm-9">
-    <h1>Authors on DataTris.com</h1>
-        <li><a href="/author/tristana-sondon.html">Tristana Sondon</a> (2)</li>
+    <h1>Authors on datatris.com</h1>
+        <li><a href="datatris.com/author/tristana-sondon.html">Tristana Sondon</a> (2)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
@@ -84,7 +84,7 @@ DataTris.com            </a>
 
 
 
-            <li class="list-group-item"><a href="/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
+            <li class="list-group-item"><a href="datatris.com/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
                 <ul class="list-group " id="tags">
                 </ul>
             </li>
@@ -132,13 +132,13 @@ DataTris.com            </a>
       </div>
    </div>
 </footer>
-<script src="/theme/js/jquery.min.js"></script>
+<script src="datatris.com/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="/theme/js/bootstrap.min.js"></script>
+<script src="datatris.com/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="/theme/js/respond.min.js"></script>
+<script src="datatris.com/theme/js/respond.min.js"></script>
 
 
 </body>
