--- a/primer-test.html
+++ b/primer-test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" prefix="og: http://ogp.me/ns# fb: https://www.facebook.com/2008/fbml">
 <head>
-    <title>Test primero - DataTris.com</title>
+    <title>Test primero - datatris.com</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -9,16 +9,16 @@
 
 
 
-<link rel="canonical" href="/primer-test.html">
+<link rel="canonical" href="datatris.com/primer-test.html">
 
         <meta name="author" content="Tristana Sondon" />
         <meta name="keywords" content="test,pelican" />
         <meta name="description" content="probando pelican por primera vez en mi mac" />
 
-        <meta property="og:site_name" content="DataTris.com" />
+        <meta property="og:site_name" content="datatris.com" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Test primero"/>
-        <meta property="og:url" content="/primer-test.html"/>
+        <meta property="og:url" content="datatris.com/primer-test.html"/>
         <meta property="og:description" content="probando pelican por primera vez en mi mac"/>
         <meta property="article:published_time" content="2015-07-10" />
             <meta property="article:section" content="general" />
@@ -28,11 +28,11 @@
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="/theme/css/bootstrap.min.css" type="text/css"/>
-    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="datatris.com/theme/css/bootstrap.min.css" type="text/css"/>
+    <link href="datatris.com/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="/theme/css/pygments/native.css" rel="stylesheet">
-    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
+    <link href="datatris.com/theme/css/pygments/native.css" rel="stylesheet">
+    <link rel="stylesheet" href="datatris.com/theme/css/style.css" type="text/css"/>
 
 
 
@@ -50,20 +50,20 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="/" class="navbar-brand">
-DataTris.com            </a>
+            <a href="datatris.com/" class="navbar-brand">
+datatris.com            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                         <li >
-                            <a href="/category/code.html">Code</a>
+                            <a href="datatris.com/category/code.html">Code</a>
                         </li>
                         <li class="active">
-                            <a href="/category/general.html">General</a>
+                            <a href="datatris.com/category/general.html">General</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
+              <li><a href="datatris.com/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -78,7 +78,7 @@ DataTris.com            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="/primer-test.html"
+                    <a href="datatris.com/primer-test.html"
                        rel="bookmark"
                        title="Permalink to Test primero">
                         Test primero
@@ -99,9 +99,9 @@ DataTris.com            </a>
 
 
 <span class="label label-default">Tags</span>
-	<a href="/tag/test.html">test</a>
+	<a href="datatris.com/tag/test.html">test</a>
         /
-	<a href="/tag/pelican.html">pelican</a>
+	<a href="datatris.com/tag/pelican.html">pelican</a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
@@ -126,7 +126,7 @@ DataTris.com            </a>
 
 
 
-            <li class="list-group-item"><a href="/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
+            <li class="list-group-item"><a href="datatris.com/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
                 <ul class="list-group " id="tags">
                 </ul>
             </li>
@@ -174,13 +174,13 @@ DataTris.com            </a>
       </div>
    </div>
 </footer>
-<script src="/theme/js/jquery.min.js"></script>
+<script src="datatris.com/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="/theme/js/bootstrap.min.js"></script>
+<script src="datatris.com/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="/theme/js/respond.min.js"></script>
+<script src="datatris.com/theme/js/respond.min.js"></script>
 
 
 </body>
