--- a/first-test-with-code.html
+++ b/first-test-with-code.html
@@ -9,7 +9,7 @@
 
 
 
-<link rel="canonical" href="datatris.com/first-test-with-code.html">
+<link rel="canonical" href="/first-test-with-code.html">
 
         <meta name="author" content="Tristana Sondon" />
         <meta name="description" content="Code examples Bash # python 2.7 python -m SimpleHTTPServer # python 3 python -m http.server Python import math # simple calculation print math.srqt(2) a = [1, 2, 3] print a * 2" />
@@ -17,7 +17,7 @@
         <meta property="og:site_name" content="datatris.com" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="First test with code"/>
-        <meta property="og:url" content="datatris.com/first-test-with-code.html"/>
+        <meta property="og:url" content="/first-test-with-code.html"/>
         <meta property="og:description" content="Code examples Bash # python 2.7 python -m SimpleHTTPServer # python 3 python -m http.server Python import math # simple calculation print math.srqt(2) a = [1, 2, 3] print a * 2"/>
         <meta property="article:published_time" content="2015-07-11" />
             <meta property="article:section" content="code" />
@@ -25,11 +25,11 @@
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="datatris.com/theme/css/bootstrap.min.css" type="text/css"/>
-    <link href="datatris.com/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="/theme/css/bootstrap.min.css" type="text/css"/>
+    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="datatris.com/theme/css/pygments/native.css" rel="stylesheet">
-    <link rel="stylesheet" href="datatris.com/theme/css/style.css" type="text/css"/>
+    <link href="/theme/css/pygments/native.css" rel="stylesheet">
+    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
 
 
 
@@ -47,20 +47,20 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="datatris.com/" class="navbar-brand">
+            <a href="/" class="navbar-brand">
 datatris.com            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                         <li class="active">
-                            <a href="datatris.com/category/code.html">Code</a>
+                            <a href="/category/code.html">Code</a>
                         </li>
                         <li >
-                            <a href="datatris.com/category/general.html">General</a>
+                            <a href="/category/general.html">General</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="datatris.com/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
+              <li><a href="/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -75,7 +75,7 @@ datatris.com            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="datatris.com/first-test-with-code.html"
+                    <a href="/first-test-with-code.html"
                        rel="bookmark"
                        title="Permalink to First test with code">
                         First test with code
@@ -139,7 +139,7 @@ python -m http.server
 
 
 
-            <li class="list-group-item"><a href="datatris.com/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
+            <li class="list-group-item"><a href="/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
                 <ul class="list-group " id="tags">
                 </ul>
             </li>
@@ -187,13 +187,13 @@ python -m http.server
       </div>
    </div>
 </footer>
-<script src="datatris.com/theme/js/jquery.min.js"></script>
+<script src="/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="datatris.com/theme/js/bootstrap.min.js"></script>
+<script src="/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="datatris.com/theme/js/respond.min.js"></script>
+<script src="/theme/js/respond.min.js"></script>
 
 
 </body>
