--- a/first-test-with-code.html
+++ b/first-test-with-code.html
@@ -130,6 +130,11 @@ python -m http.server
 
 <section class="well well-sm">
     <ul class="list-group list-group-flush">
+            <li class="list-group-item"><h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Social</span></h4>
+              <ul class="list-group" id="social">
+                <li class="list-group-item"><a href="https://twitter.com/tris_sondon"><i class="fa fa-twitter-square fa-lg"></i> Twitter</a></li>
+              </ul>
+            </li>
 
 
 
