--- a/archives.html
+++ b/archives.html
@@ -135,7 +135,7 @@ datatris.com            </a>
             var s = document.createElement('script');
             s.async = true;
             s.type = 'text/javascript';
-            s.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+            s.src = '//' + disqus_shortname + '.disqus.com/count.js';
             (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
         }());
     </script>
