--- a/first-test-with-code.html
+++ b/first-test-with-code.html
@@ -130,7 +130,7 @@ python -m http.server
             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
             var disqus_shortname = 'datatris'; // required: replace example with your forum shortname
 
-                    var disqus_identifier = 'first-test-with-code';
+                    var disqus_identifier = '2015-07-first-test-with-code';
                 var disqus_url = '/first-test-with-code.html';
 
             var disqus_config = function () {
