--- a/primer-test.html
+++ b/primer-test.html
@@ -117,7 +117,7 @@ datatris.com            </a>
             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
             var disqus_shortname = 'datatris'; // required: replace example with your forum shortname
 
-                    var disqus_identifier = 'primer-test';
+                    var disqus_identifier = '2015-07-primer-test';
                 var disqus_url = '/primer-test.html';
 
             var disqus_config = function () {
